--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -131,3 +131,11 @@ tail_includes:
   </div><!-- .post-tail-bottom -->
 
 </div><!-- div.post-tail-wrapper -->
+
+<script src="https://utteranc.es/client.js"
+        repo="lumpenop/lumpenop.github.io"
+        issue-term="pathname"
+        theme="github-dark"
+        crossorigin="anonymous"
+        async>
+</script>
